# ccc-server

./: .env.example  .vercelignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  openapi.yaml  requirements.txt  setup.cfg  vercel.json
.openapi-generator/: FILES
api/: index.py
src/openapi_server/: admin.py  card_renderer.py  db.py  github_client.py  main.py  security_api.py
src/openapi_server/apis/: auth_api.py  auth_api_base.py  projects_api.py  projects_api_base.py  repos_api.py  repos_api_base.py
src/openapi_server/impl/: auth_impl.py  projects_impl.py  repos_impl.py
src/openapi_server/models/: auth_session.py  auth_user.py  card_element.py  card_element_style.py  card_project.py  card_sheet.py  card_template.py  export_project_request.py  initiate_git_hub_auth200_response.py  installation.py  installation_account.py  repo_summary.py  save_project_request.py  save_project_response.py
tests/: test_auth_api.py  test_projects_api.py  test_proxy.py  test_repos_api.py
