[metadata]
name = openapi_server
version = 3.0.0
description = Backend API for CardForge. Authentication is handled via GitHub App OAuth flow (server-side). The backend manages GitHub tokens and interacts with GitHub on behalf of the user. 
long_description = file: README.md
keywords = OpenAPI CardForge API
python_requires = >= 3.10.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
