[metadata]
name = openapi_server
version = 4.0.0
description = CardForge proxy — stateless GitHub device-flow login (CORS shim) and optional remote PDF rendering. All persistence lives in the user's own GitHub repos.
long_description = file: README.md
keywords = CardForge GitHub device-flow PDF
python_requires = >= 3.10.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
install_requires =
    fastapi
    uvicorn
    httpx
    weasyprint>=62.0
    pydantic>=2
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
